objects/smagicinteract__incoming_lookup_config__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__MobilePhoneField__c</fullName>
        <label>Search MobileField Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Notify_Record_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Record Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__ReferenceField__c</fullName>
        <label>Reference Name on Incoming Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__incoming_sms_owner__c</fullName>
        <label>Incoming SMS Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__objectName__c</fullName>
        <label>Lookup Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Incoming Lookup</label>
    <listViews>
        <fullName>smagicinteract__Incoming_Lookup_Configuration</fullName>
        <columns>smagicinteract__objectName__c</columns>
        <columns>smagicinteract__MobilePhoneField__c</columns>
        <columns>smagicinteract__ReferenceField__c</columns>
        <columns>smagicinteract__incoming_sms_owner__c</columns>
        <columns>smagicinteract__Notify_Record_Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Incoming Lookup</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Incoming Lookup Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incoming_Lookup_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>